# cmd/golang-starter/docs/swagger.json
@@ -10,10 +10,78 @@
         },
         "license": {
             "name": "MIT",
-            "url": "https://github.com/harbur/golang-starter/blob/master/LICENSE"
+            "url": "https://github.com/harbur/golang-gin-starter/blob/master/LICENSE"
         },
         "version": "1.0.0"
     },
-    "basePath": "/api/v1",
-    "paths": {}
+    "basePath": "/api/",
+    "paths": {
+        "/movies": {
+            "get": {
+                "description": "lists movies",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "lists movies",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/movies/{id}": {
+            "get": {
+                "description": "gets a movie",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "gets a movie",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "posts a movie",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "posts a movie",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
